# ChessGame

./: .gitignore  CMakeLists.txt  GameState.c  GameState.h  Gen.c  Gen.h  GuiAux.c  GuiAux.h  GuiGameModel.c  GuiGameModel.h  GuiSaveLoadModel.c  GuiSaveLoadModel.h  GuiSettingModel.c  GuiSettingModel.h  GuiStart.c  GuiStart.h  Main.c  Main.h  MiniMax.c  MiniMax.h  README.md  SaveLoadModel.c  SaveLoadModel.h  SettingState.c  SettingState.h  Undo.c  Undo.h  Widgets.c  Widgets.h  makefile
